# PyAutoTk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  COMPARISON.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
config/: __init__.py  logger.py
controllers/browser/: browser_connection.py  browser_controller.py  widget.py
controllers/browser/pages/: abc_pages.py  google.py  linkedin.py
core/: browser_controller.py  config.yaml  config_loader.py  load_config.py  start.sh
docs/: requirements.txt
docs/source/: api_reference.rst  browser_session.rst  conf.py  configuration.rst  getting_started.rst  index.rst  introduction.rst  modules.rst  page_obj.rst  pyautotk.core.rst  pyautotk.elements.helpers.rst  pyautotk.elements.rst  pyautotk.rst  widget.rst
docs/source/core/: config_loader.rst  core_overview.rst
docs/source/elements/: helpers.rst  widget.rst
docs/source/locale/br/LC_MESSAGES/: configuration.po  index.po  modules.po  page_obj.po  pyautotk.core.po  pyautotk.elements.helpers.po
docs/source/locale/pt_BR/LC_MESSAGES/: api_reference.po  browser_session.po  configuration.po  getting_started.po  index.po  modules.po  page_obj.po  pyautotk.core.po  pyautotk.elements.helpers.po  pyautotk.elements.po  pyautotk.po  widget.po
docs/source/modules/: core.rst  elements.rst
elements/: widget.py
elements/helpers/: session_helpers.py
examples/: browser_examples.py
logger/: __init__.py  logger_utils.py
projects/example_project/: conftest.py
projects/example_project/example_suite/: nottest_example_one.py  test_example.py  test_example_one.py
pyautotk/: __init__.py
pyautotk/code-examples/: browser_examples.py  playground-playwright.py  playground-selenium.py  playground.py
pyautotk/core/: __init__.py  browser_controller.py  config_loader.py  exceptions.py  input.py  logger_utils.py
pyautotk/elements/: __init__.py  widget.py
pyautotk/elements/helpers/: __init__.py  input_helpers.py  session_helpers.py
pyautotk/examples/: __init__.py  browser_examples.py  comparation-code.py  examples.py  page-object.py  playground-playwright.py  playground-selenium.py  playground.html  playground.py  pytest_integration.py
pyautotk/examples/webpage-example/: index.html
pyautotk/examples/webpage-example/assets/js/: main.js
pyautotk/tests/: browser_unit_test.py  unit_tests.py  widget_unit_test.py
tests/: unit_tests.py
toolkits/browser/: input.py  widget.py
toolkits/utils/: session_helpers.py
