[project]
name = "pyautotk"
version = "0.3.0"
authors = [
  { name="Gabriel Ramos R. Oliveira", email="bielrammos@gmail.com" },
]
description = "Page Object framework helper"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "selenium>=4.25.0",
    "urllib3>=1.26.16",
    "attrs>=24.2.0",
    "idna>=3.10",
    "pillow>=10.4.0",
    "PySocks>=1.7.1",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "trio>=0.26.2",
    "trio-websocket>=0.11.1",
    "typing-extensions>=4.12.2",
    "websocket-client>=1.8.0",
    "wsproto>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/brailog/PyAutoTk"
Issues = "https://github.com/brailog/PyAutoTk"

[project.optional-dependencies]
dev = [
    "black>=22.10.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["pyautotk", "pyautotk.core", "pyautotk.elements", "pyautotk.elements.helpers", "pyautotk.examples"]
