[project]
name = "pyautotk"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Ramos R. Oliveira"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.50.0",
    "selenium>=4.25.0",
    "urllib3>=1.26.16",
    "attrs>=24.2.0",
    "idna>=3.10",
    "pillow>=10.4.0",
    "PySocks>=1.7.1",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "trio>=0.26.2",
    "trio-websocket>=0.11.1",
    "typing-extensions>=4.12.2",
    "websocket-client>=1.8.0",
    "wsproto>=1.2.0",
    "pytest>=8.3.3",
    "sphinx-rtd-theme"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools>=61.0"]
build-backend = ["poetry.core.masonry.api", "setuptools.build_meta"]

[project.urls]
Homepage = "https://github.com/brailog/PyAutoTk"
Issues = "https://github.com/brailog/PyAutoTk"
Documentation = "https://pyautotk.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
    "black>=22.10.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools]
packages = ["pyautotk", "pyautotk.core", "pyautotk.elements", "pyautotk.elements.helpers", "pyautotk.examples"]
